@@ -19,6 +19,7 @@ tags*
 /CNAME
 /img/
 /pages/
+/css/
 /js/
 /ejs/
 
