@@ -1,0 +1,447 @@
+span.ua {
+  display: inline-block !important;
+  margin: auto 1px .3em !important;
+  color: #fff !important;
+}
+
+.os_other {
+  background-color: #bdb2a7!important;
+  color: #fff;
+  border: 1px solid #BBB!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_other {
+  background-color: #bdb2a7!important;
+  color: #fff;
+  border: 1px solid #BBB!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_other {
+  opacity: 1;
+}
+
+.os_other:hover {
+  opacity: 1;
+}
+
+.ua_ie {
+  background-color: #428bca!important;
+  border-color: #357ebd!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_ie:hover {
+  opacity: 1;
+}
+
+.ua_firefox {
+  background-color: #f0ad4e!important;
+  border-color: #eea236!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_firefox:hover {
+  opacity: 1;
+}
+
+.ua_maxthon {
+  background-color: #7373B9!important;
+  border-color: #7373B9!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_maxthon:hover {
+  opacity: 1;
+}
+
+.ua_ucweb {
+  background-color: #FF740F!important;
+  border-color: #d43f3a!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_ucweb:hover {
+  opacity: 1;
+}
+
+.ua_sogou {
+  background-color: #78ACE9!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_sogou:hover {
+  opacity: 1;
+}
+
+.ua_2345explorer {
+  background-color: #2478B8!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_2345explorer:hover {
+  opacity: 1;
+}
+
+.ua_2345chrome {
+  background-color: #F9D024!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_2345chrome:hover {
+  opacity: 1;
+}
+
+.ua_mi {
+  background-color: #FF4A00!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_mi:hover {
+  opacity: 1;
+}
+
+.ua_lbbrowser {
+  background-color: #FC9D2E!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_lbbrowser:hover {
+  opacity: 1;
+}
+
+.ua_chrome {
+  background-color: #EE6252!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_chrome:hover {
+  opacity: 1;
+}
+
+.ua_qq {
+  background-color: #3D88A8!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_qq:hover {
+  opacity: 1;
+}
+
+.ua_apple {
+  background-color: #E95620!important;
+  border-color: #4cae4c!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_apple:hover {
+  opacity: 1;
+}
+
+.ua_opera {
+  background-color: #d9534f!important;
+  border-color: #d43f3a!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.ua_opera:hover {
+  opacity: 1;
+}
+
+.os_vista,.os_2000,.os_windows,.os_xp,.os_7,.os_8,.os_8_1 {
+  background-color: #39b3d7!important;
+  border-color: #46b8da!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_vista,.os_2000,.os_windows,.os_xp,.os_7,.os_8,.os_8_1:hover {
+  opacity: 1;
+}
+
+.os_android {
+  background-color: #98C13D!important;
+  border-color: #01B171!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_android:hover {
+  opacity: 1;
+}
+
+.os_ubuntu {
+  background-color: #DD4814!important;
+  border-color: #01B171!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_ubuntu:hover {
+  opacity: 1;
+}
+
+.os_linux {
+  background-color: #3A3A3A!important;
+  border-color: #1F1F1F!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_linux:hover {
+  opacity: 1;
+}
+
+.os_mac {
+  background-color: #666666!important;
+  border-color: #1F1F1F!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_mac:hover {
+  opacity: 1;
+}
+
+.os_unix {
+  background-color: #006600!important;
+  border-color: #1F1F1F!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_unix:hover {
+  opacity: 1;
+}
+
+.os_nokia {
+  background-color: #014485!important;
+  border-color: #1F1F1F!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.os_nokia:hover {
+  opacity: 1;
+}
+/*UA End*/
+/*Head Start*/
+/*博主标记 CSS*/
+.sskadmin {
+  background-color: #00a67c!important;
+  border-color: #01B171!important;
+  border-radius: 4px;
+  padding: 0 5px!important;
+  opacity: .8;
+}
+
+.sskadmin:hover {
+  opacity: 1;
+}
+/*头像样式*/
+#ds-reset .ds-avatar {
+  background: none !important;
+  box-shadow: none !important;
+}
+
+#ds-reset .ds-avatar img , #ds-thread #ds-reset ul.ds-children .ds-avatar img {
+  width: 50px !important;
+  height: 50px !important;
+  -webkit-transition: .9s;
+  -moz-transition: .9s;
+  -o-transition: .9s;
+  -ms-transition: .9s;
+  padding: 2px;
+  border: 1px solid #ddd;
+  background: #fff;
+}
+/*鼠标悬停旋转头像*/
+.ds-post:hover .ds-avatar img {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  border-radius: 30px !important;
+}
+
+#ds-reset .ds-avatar img:hover {
+  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+  -moz-transform: rotate(360deg);
+  -o-transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  border-radius: 30px !important;
+}
+
+#ds-thread #ds-reset .ds-comment-body, #ds-thread #ds-reset ul.ds-children .ds-comment-body {
+  padding-left: 70px !important;
+}
+
+#ds-thread #ds-reset .ds-comment-body, #ds-thread #ds-reset ul.ds-children .ds-comment-body {
+  padding-left: 70px !important;
+}
+
+.ds-post:hover {
+  background: #eee !important;
+}
+
+#ds-thread #ds-reset ul.ds-children .ds-avatar {
+  width: 50px !important;
+}
+
+#ds-thread #ds-reset .ds-replybox {
+  padding: 0 0 0 80px !important;
+}
+
+#ds-reset #ds-ctx .ds-ctx-entry .ds-ctx-body {
+  margin-left: 68px !important;
+}
+
+#ds-recent-comments li.ds-comment:nth-of-type(1) {
+  border: none !important;
+}
+
+#ds-thread {
+  border-radius: 3px;
+}
+/** 多说最近留言样式 **/
+#ds-recent-comments .ds-avatar img {
+  width: 54px;
+  height: 54px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  box-shadow: inset 0 -1px 0 #3333sf;
+/*设置图像阴影效果*/
+  -webkit-box-shadow: inset 0 -1px 0 #3333sf;
+  -webkit-transition: 0.4s;
+  -webkit-transition: -webkit-transform 0.4s ease-out;
+  transition: transform 0.4s ease-out;
+  -moz-transition: -moz-transform 0.4s ease-out;
+}
+
+#ds-recent-comments .ds-avatar img:hover {
+  box-shadow: 0 0 10px #fff;
+  rgba(255,255,255,.6), inset 0 0 20px rgba(255,255,255,1);
+  -webkit-box-shadow: 0 0 10px #fff;
+  rgba(255,255,255,.6), inset 0 0 20px rgba(255,255,255,1);
+  transform: rotateZ(360deg);
+  -webkit-transform: rotateZ(360deg);
+  -moz-transform: rotateZ(360deg);
+}
+
+.ds-meta {
+  opacity: .5;
+}
+
+.ds-meta:hover {
+  opacity: 1;
+}
+
+#ds-thread #ds-reset a.ds-like-thread-button {
+  background-image: none;
+  background-color: #fee2d3;
+  border: none;
+  text-shadow: none;
+  font-family: inherit;
+}
+
+#ds-thread #ds-reset .ds-login-buttons {
+  opacity: .5;
+}
+
+#ds-thread #ds-reset .ds-login-buttons:hover {
+  opacity: 1;
+}
+
+#ds-thread #ds-reset .ds-comment-body p, #ds-thread #ds-reset .ds-textarea-wrapper textarea {
+  font-size: 1.15em;
+  color: #717171;
+  font-family: inherit;
+}
+
+#ds-thread #ds-reset .ds-highlight {
+  color: #ef7c6c !important;
+}
+
+#ds-thread #ds-reset .ds-user-name {
+  color: #ef7c6c !important;
+}
+
+#ds-thread #ds-reset .ds-textarea-wrapper textarea {
+  background: url("/resources/Mihawk-s.png") bottom right no-repeat;
+}
+
+#ds-thread #ds-reset .ds-textarea-wrapper {
+  background: rgba(255, 255, 255, .5);
+}
+
+#ds-reset .ds-gradient-bg {
+  background: rgba(255, 255, 255, .5);
+}
+
+#ds-thread #ds-reset .ds-post-button {
+  background-image: none;
+  background: rgba(136, 172, 219, .2);
+  text-shadow: none;
+}
+
+#ds-thread #ds-reset li.ds-post {
+  background: rgba(255, 255, 255, .2);
+}
+
+#ds-thread #ds-reset li.ds-post:hover {
+  background-color: rgba(255, 255, 255, .6) !important;
+}
+
+#ds-thread #ds-reset li.ds-tab a.ds-current {
+  background: rgba(255, 255, 255, .2);
+}
+/*Head End*/
+
