@@ -12,7 +12,7 @@
     "hexo-generator-baidu-sitemap": "^0.1.2",
     "hexo-generator-category": "^0.1.2",
     "hexo-generator-feed": "^1.0.3",
-    "hexo-generator-index": "^0.1.2",
+    "hexo-generator-index": "^0.1.3",
     "hexo-generator-sitemap": "^1.0.1",
     "hexo-generator-tag": "^0.1.1",
     "hexo-renderer-ejs": "^0.1.1",
