@@ -39,8 +39,9 @@ date: 2016-02-17 15:09:40
     * 别人秀妹子但我没有时：(〒▽〒)
     * 其他不开心的表情就不放了，因为真的不好看……
 
-另外，你可以在此留言。
+> 另外，你可以在此留言。
 
 2016 年春
-@Arondight
+
+@[Arondight](http://arondight.me)
 
