@@ -1,8 +1,8 @@
 title: 可能要换工作了
 date: 2016-01-15 20:27:51
-tags:
+categories:
   - 日常
-  - 随笔
+tags:
   - 工作
 ---
 
