@@ -1,10 +1,10 @@
 title: 新年快乐
 date: 2016-02-08 00:00:00
-tags:
-  - 随笔
+categories:
   - 日常
-  - 新年
   - 技术
+tags:
+  - 新年
   - C
   - Shell
   - 汇编
@@ -22,4 +22,6 @@ __=____;*(&__+2)=__;__asm__("\x6d\x6f\x76\x6c\
 \x20\x24\x30\x2c\x25\x65\x64\x69\x0a\x09");%>
 By_Arondight
 ```
+
+惟愿可以遇到美好的人和事。
 
