@@ -1,7 +1,8 @@
 title: 软件和世界，愚者的中二之语
 date: 2016-01-10 19:24:11
-tags:
+categories:
   - 日常
+tags:
   - 随笔
   - 中二
 ---
