@@ -1,8 +1,9 @@
 title: 随便写一点东西
 date: 2016-01-03 15:34:18
-tags:
+categories:
   - 日常
-  - 随笔
+tags:
+  - 开始
 ---
 
 下午慢慢折腾了一下Hexo，然后成果就是这个博客。老实说我也不太清楚以后究竟在这上面会写点什么，多半会是所处的日常吧。
