@@ -1,3 +1,7 @@
+v2016-02-18
+  * Add categories for posts
+  * Upgrade theme
+
 v2016-02-17.2
   * Modify post "使用SSH反向隧道进行内网穿透"
 
